// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component renders 1`] = `
Array [
  <ul
    className="sc-bwzfXH edODBp"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
      >
        /
      </a>
    </li>
    <li>
      <a
        href="/about"
        onClick={[Function]}
      >
        /about
      </a>
    </li>
    <li>
      <a
        href="/clicker"
        onClick={[Function]}
      >
        /clicker
      </a>
    </li>
    <li>
      <a
        href="/some-page"
        onClick={[Function]}
      >
        /some-page
      </a>
    </li>
    <li>
      <a
        href="/not-found"
        onClick={[Function]}
      >
        Dead link
      </a>
    </li>
  </ul>,
  <em>
    Loading
  </em>,
]
`;

exports[`App component renders the About page 1`] = `
Array [
  <ul
    className="sc-bwzfXH edODBp"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
      >
        /
      </a>
    </li>
    <li>
      <a
        href="/about"
        onClick={[Function]}
      >
        /about
      </a>
    </li>
    <li>
      <a
        href="/clicker"
        onClick={[Function]}
      >
        /clicker
      </a>
    </li>
    <li>
      <a
        href="/some-page"
        onClick={[Function]}
      >
        /some-page
      </a>
    </li>
    <li>
      <a
        href="/not-found"
        onClick={[Function]}
      >
        Dead link
      </a>
    </li>
  </ul>,
  <h2>
    About
  </h2>,
  <p>
    Jacob Fischer
     made this page! It's simple boilerplate to get up and moving ASAP.
  </p>,
]
`;

exports[`App component renders the NotFound page on bad routes 1`] = `
Array [
  <ul
    className="sc-bwzfXH edODBp"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
      >
        /
      </a>
    </li>
    <li>
      <a
        href="/about"
        onClick={[Function]}
      >
        /about
      </a>
    </li>
    <li>
      <a
        href="/clicker"
        onClick={[Function]}
      >
        /clicker
      </a>
    </li>
    <li>
      <a
        href="/some-page"
        onClick={[Function]}
      >
        /some-page
      </a>
    </li>
    <li>
      <a
        href="/not-found"
        onClick={[Function]}
      >
        Dead link
      </a>
    </li>
  </ul>,
  <h2>
    Not Found
  </h2>,
  <pre>
    Sorry, but we couldn't find anything here!
  </pre>,
]
`;

exports[`App component renders the SomePage page 1`] = `
Array [
  <ul
    className="sc-bwzfXH edODBp"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
      >
        /
      </a>
    </li>
    <li>
      <a
        href="/about"
        onClick={[Function]}
      >
        /about
      </a>
    </li>
    <li>
      <a
        href="/clicker"
        onClick={[Function]}
      >
        /clicker
      </a>
    </li>
    <li>
      <a
        href="/some-page"
        onClick={[Function]}
      >
        /some-page
      </a>
    </li>
    <li>
      <a
        href="/not-found"
        onClick={[Function]}
      >
        Dead link
      </a>
    </li>
  </ul>,
  <h3>
    SomePage
  </h3>,
  <p>
    This is just some random page.
  </p>,
  <p>
    <em>
      I hope this gives you an idea of where to go with this project!
    </em>
  </p>,
]
`;

exports[`App component renders the index Home page 1`] = `
Array [
  <ul
    className="sc-bwzfXH edODBp"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
      >
        /
      </a>
    </li>
    <li>
      <a
        href="/about"
        onClick={[Function]}
      >
        /about
      </a>
    </li>
    <li>
      <a
        href="/clicker"
        onClick={[Function]}
      >
        /clicker
      </a>
    </li>
    <li>
      <a
        href="/some-page"
        onClick={[Function]}
      >
        /some-page
      </a>
    </li>
    <li>
      <a
        href="/not-found"
        onClick={[Function]}
      >
        Dead link
      </a>
    </li>
  </ul>,
  <div
    className="sc-htpNat fxtGgv"
  >
    <h1>
      Home
    </h1>
    <p>
      Welcome to the index page!
    </p>
  </div>,
]
`;

exports[`App component renders with React-Loadable once preloaded 1`] = `
Array [
  <ul
    className="sc-bwzfXH edODBp"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
      >
        /
      </a>
    </li>
    <li>
      <a
        href="/about"
        onClick={[Function]}
      >
        /about
      </a>
    </li>
    <li>
      <a
        href="/clicker"
        onClick={[Function]}
      >
        /clicker
      </a>
    </li>
    <li>
      <a
        href="/some-page"
        onClick={[Function]}
      >
        /some-page
      </a>
    </li>
    <li>
      <a
        href="/not-found"
        onClick={[Function]}
      >
        Dead link
      </a>
    </li>
  </ul>,
  <div
    className="sc-htpNat fxtGgv"
  >
    <h1>
      Home
    </h1>
    <p>
      Welcome to the index page!
    </p>
  </div>,
]
`;
